docs/tests/nameres/expressions/valid/Sizeof.src
// Valid

let int size = sizeof(int);