docs/tests/nameres/expressions/invalid/SizeofTypeDoesntExist.src
// Invalid 

let int size = sizeof(WHAT);